force-app/main/default/objects/RSI_Insurance_Policy__c/RSI_Insurance_Policy__c.object-meta.xml
<CustomObject>
    <label>Policy</label>
    <nameField>
        <displayFormat>PN-{00000}</displayFormat>
        <label>Insurance Policy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>