force-app/main/default/objects/RSI_Insurance_Policy__c/fields/CAIP_Policy_merge__c.field-meta.xml
<CustomField>
    <fullName>CAIP_Policy_merge__c</fullName>
    <formula>&quot;Policy &quot; &amp; RSI_Policy_Number__c &amp; &quot; | &quot; &amp;  Text(RSI_Policy_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAIP Policy merge</label>
    <type>Text</type>
</CustomField>