force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Address__c.field-meta.xml
<CustomField>
    <fullName>RSI_Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>