force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>RSI_Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Insurance_Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>