force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>RSI_Booking_Date__c</fullName>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>