force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Deductible__c.field-meta.xml
<CustomField>
    <fullName>RSI_Deductible__c</fullName>
    <label>Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>