force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Description__c.field-meta.xml
<CustomField>
    <fullName>RSI_Description__c</fullName>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>