force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Driver_s__c.field-meta.xml
<CustomField>
    <fullName>RSI_Driver_s__c</fullName>
    <label>Driver(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>