force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>RSI_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>