force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>RSI_Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>