force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Garaging_ZIP__c.field-meta.xml
<CustomField>
    <fullName>RSI_Garaging_ZIP__c</fullName>
    <label>Garaging ZIP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>