force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>RSI_Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jewellary</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Kitchen Item</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Jewellery</fullName>
                <isActive>false</isActive>
                <label>Jewellery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>