force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Location__c.field-meta.xml
<CustomField>
    <fullName>RSI_Location__c</fullName>
    <label>Location</label>
    <type>Address</type>
</CustomField>