force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Miles__c.field-meta.xml
<CustomField>
    <fullName>RSI_Miles__c</fullName>
    <label>Miles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>