force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Municipal_Tax__c.field-meta.xml
<CustomField>
    <fullName>RSI_Municipal_Tax__c</fullName>
    <label>Municipal Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>