force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_MVR_Check__c.field-meta.xml
<CustomField>
    <fullName>RSI_MVR_Check__c</fullName>
    <label>MVR Check</label>
    <length>100</length>
    <type>Text</type>
</CustomField>