force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_My_Policies__c.field-meta.xml
<CustomField>
    <fullName>RSI_My_Policies__c</fullName>
    <formula>RSI_Policy_Holder__c = $User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Policies</label>
    <type>Checkbox</type>
</CustomField>