force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Number_of_Items__c.field-meta.xml
<CustomField>
    <fullName>RSI_Number_of_Items__c</fullName>
    <label>Number of Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>