force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_ObjectFormula__c.field-meta.xml
<CustomField>
    <fullName>RSI_ObjectFormula__c</fullName>
    <formula>&quot;/&quot; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ObjectFormula</label>
    <type>Text</type>
</CustomField>