force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Policy_Holder__c.field-meta.xml
<CustomField>
    <fullName>RSI_Policy_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>