force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>RSI_Policy_Number__c</fullName>
    <displayFormat>PN-{00000}</displayFormat>
    <label>Policy Number</label>
    <type>AutoNumber</type>
</CustomField>