force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Policy_Term__c.field-meta.xml
<CustomField>
    <fullName>RSI_Policy_Term__c</fullName>
    <label>Policy Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>