force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>RSI_Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Home Insurance</fullName>
            </value>
            <value>
                <fullName>Personal Property</fullName>
            </value>
            <value>
                <fullName>Renter Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>