force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Premium__c.field-meta.xml
<CustomField>
    <fullName>RSI_Premium__c</fullName>
    <label>Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>