force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>RSI_Renewal_Date__c</fullName>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>