force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Sum_Assured__c.field-meta.xml
<CustomField>
    <fullName>RSI_Sum_Assured__c</fullName>
    <label>Sum Assured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>