force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Usage__c.field-meta.xml
<CustomField>
    <fullName>RSI_Usage__c</fullName>
    <label>Usage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>