force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_Value_of_home__c.field-meta.xml
<CustomField>
    <fullName>RSI_Value_of_home__c</fullName>
    <label>Value of home</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>