force-app/main/default/objects/RSI_Insurance_Policy__c/fields/RSI_VIN__c.field-meta.xml
<CustomField>
    <fullName>RSI_VIN__c</fullName>
    <label>VIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>