force-app/main/default/objects/RSI_Insurance_Policy__c/recordTypes/Home.recordType-meta.xml
<RecordType>
    <fullName>Home</fullName>
    <active>true</active>
    <label>Home</label>
</RecordType>