force-app/main/default/objects/RSI_Insurance_Policy__c/recordTypes/Person_Property.recordType-meta.xml
<RecordType>
    <fullName>Person_Property</fullName>
    <active>true</active>
    <label>Person Property</label>
</RecordType>