force-app/main/default/objects/RSI_Insurance_Policy__c/recordTypes/Renter_s_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Renter_s_Insurance</fullName>
    <active>true</active>
    <label>Renter&apos;s Insurance</label>
</RecordType>