force-app/main/default/objects/RSI_Insurance_Policy__c/listViews/My_Policies.listView-meta.xml
<ListView>
    <fullName>My_Policies</fullName>
    <columns>NAME</columns>
    <columns>RSI_Policy_Type__c</columns>
    <columns>RSI_Premium__c</columns>
    <columns>Status__c</columns>
    <columns>RSI_Effective_Date__c</columns>
    <columns>RSI_Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Policies</label>
</ListView>